css/site.css
/* colors derived from:http://www.flickr.com/photos/karhan/8372828011 */

html, body, h1, h2, h3, h4, h5, h6 { margin:0;padding:0; }
html { font-size:100% }
body {
  width:700px;
  background:#f6f6f6;
  margin:0 auto;
  color:#333;
  font:normal 0.9em/1.8 "Libre Baskerville", serif;
  -webkit-text-stroke:1px transparent;
  padding:3em 0 0;
}
a, a:visited, a:active {
  color:#446688;
  text-decoration:none;
  border-bottom:1px solid #bcd;
}
a:hover {
  color:#2d3939;
  border-bottom:1px solid #dd9922;
}
h1, h2, h3, h4, h5, h6 {
  color:#446688;
  font-family:"Libre Baskerville", serif;
  font-weight:normal;
}
h1 span {
  font-size:13px;
  font-family:"Libre Baskerville", serif;
  color:#333;
}
h2 { margin-top:0; }
h3 { color:#333; }
p { margin:0.95em 0; }
ul,ol {
  margin:0 0 1.5em;
  padding-left:2.5em;
}
blockquote {
  border-left:2px solid #555;
  color:#999;
  margin:0 1em 1.5em;
  padding:0 1em;
}
pre {
  display:block;
  font-family:"Inconsolata XL", monospace;
  background:#f2ede8;
  padding:5px;
  overflow:auto;
}
code {
  font-size:1.3em;
  padding:3px;
  background-color:#f2ede8;
}
img { max-width:100%; }

/* img floats */
img.right { float:right; margin:0 0 12px 12px; }
img.left { float:left; margin:0 12px 12px 0; }
img.thumb.left {
  margin-right:6px;
}
img.thumb.right {
  margin-left:6px;
}
img.bordered { border:1px solid #ddd; }
p.caption {
  font-style:italic;
  font-size:0.9em;
  text-align:center;
  margin-top:0;
}

#container {
  margin:0 auto;
}

#header {
  padding:0 20px;
  margin-bottom:25px;
}
#header h1 {
  margin:0 0 0.5em;
  padding-bottom:10px;
  border-bottom:1px solid #ccc;
}
#header h1 a {
  border:none;
  color:#446688;
  font-weight:bold;
  text-decoration:none;
  text-transform:lowercase;
}
#header h1 a:hover {
  color:#dd9922;
}
#header #navigation {
  float:right;
  list-style:none;
  margin:0.75em 0 3.75em;
  padding:0;
}
#header #navigation li {
  display:inline;
  margin:0 0.25em;
}
#header #navigation a {
  font-size:1.3em;
  line-height:1.8em;
  padding:0.25em;
  text-decoration:none;
  color:#557788;
}
#header #navigation a:hover, #header #navigation a.active {
  border-bottom:2px solid #dd9922;
  text-decoration:none;
}
#header p.tagline { font-style:italic; }

.post {
  margin:8px 0 2em 0;
  background:#fff;
  padding:20px 50px;
  border-left:2px solid #eee;
  border-right:2px solid #eee;
  border-bottom:2px solid #eee;
}
.post h1 {
  margin-top:10px;
}
.post h1 a {
  border:none;
}
.post p {
  line-height:2em;
}
.post span.meta {
  display:block;
  text-align:left;
  margin-bottom:15px;
  color:#bbb;
  clear:left;
}
.post span.meta a {
  border:0;
}
.post .embed {
  position:relative;
  padding-bottom:56.25%;
  padding-top:30px;
  height:0;
  overflow:hidden;
  margin:8px 0;
}
.embed iframe, .embed object, .embed embed {
  position:absolute;
  top:0;
  left:0;
  width:100%;
  height:100%;
}

.link {
  margin:8px 0 2em 0;
  background:#fff;
  padding:20px 50px;
  border-left:2px solid #eee;
  border-right:2px solid #eee;
  border-bottom:2px solid #eee;
}
.link h1 {
  font-size:1.3em;
}
.link h1 a {
}
.link span.meta {
  display:block;
  text-align:left;
  font-size:0.8em;
  margin-bottom:15px;
  color:#bbb;
  clear:left;
}

.body {
  margin-bottom:15px;
}

.single p {
  line-height:1.9em;
}

.post .footnotes {
  font-size:0.8em;
  margin:15px 0;
}
.post .footnotes ol {
  border-top:#ddd;
}
.post .footnotes p {
  margin:2px 0;
}

.page {
  margin:8px 0 3em 0;
  background:#fff;
  padding:20px 50px;
  border-left:2px solid #eee;
  border-right:2px solid #eee;
  border-bottom:2px solid #eee;
}
.archive h1 {
  margin:10px 0;
}
.archive table { width:100%; }
.archive table td {
  padding:3px 3px;
  /*border-bottom:1px solid #ccc;*/
}
.archive table td.right-cell { text-align:right; color:#555; }
.archive table tr.odd { background-color:#F2EDE8; }
.archive-table {
  margin-bottom:15px;
}

.feature { margin-bottom:20px; }

/* maps page */
.maps h1 { margin:10px 0; }
.maps a img { border:2px solid #f0f0f0; }
.maps a:hover img { border:2px solid #4da3a3; }
.maps .caption {
  text-align:center;
  color:#777;
  margin:4px 0 20px;
  padding:0;
  font-style:italic;
  font-size:1.2em;
}
.maps .caption .about {
  color:#bbb;
  font-size:0.8em;
}

/* talks page */
.talk { margin-bottom:15px; }
.talk .image { margin-bottom:20px; }
.talks h1 { margin:10px 0; }
.talks a.img, .talks a.img:hover { border:none; }
.talk .title {
  font-size:1.1em;
  margin-top:10px;
}

.share { display:block; clear:left; }
.share ul,li { margin:0; padding:0; }
.share ul {
  width:170px;
  margin-left:0;
  margin:0 auto 25px;
}
.share li {
  display:block;
  float:left;
}
.share li:first-child { margin-right:-20px; }
.share li:last-child { margin-right:0; margin-top:-5px; }
.share iframe {
  vertical-align:top;
}

#footer {
  font-size:0.8em;
  margin-bottom:35px;
  text-align:center;
  color:#aaa;
}
.pagination { margin-bottom:5px; }
.pagination table { width:100%; }
.pagination table td { padding:3px 3px; }
.pagination td.right { text-align:right; }
.pagination-button {
  font-size:0.9em;
  text-transform:uppercase;
}
.mobile-nav { display:none; }

/* media */
@media only screen and (max-device-width:480px) {
  body {
    width:320px;
    padding-top:1em;
  }
  .pagination { display:none; }
  .main-nav { display:none; }
  .mobile-nav { display:block !important; margin-bottom:20px; }
  .mobile-nav ul { list-style-type:none; text-align:center; margin:0; padding:0; }
  .mobile-nav ul li { display:inline; padding:0 5px; }
  .post { padding:20px; }
  .post h1 { font-size:1.5em; }
  img.right, img.left { float:none; display:block; }
}

